[최윤혁 07/06] stack 직접구현 v1.1
stack 구현
 - (완료)CustomStackUsingLinkedList